@@ -1,5 +1,10 @@
 2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* Mono.Addins/TreeNodeCollection.cs, Mono.Addins/TreeNode.cs: Clone the node
+	  children list when notifying the add-in load event since it may change.
+
+2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* Mono.Addins/AddinRegistry.cs, Mono.Addins.Database/AddinDatabase.cs: Fix
 	  problem about the current registry domain not being properly set when
 	  the add-in database is regenerated due to an internal check.
